      - There are currently 20 languages available, seen in the config.yml.
      - If your language is not present it can be requested and added to the crowdin website: https://crowdin.com/project/townyadvanced
    - A global.yml language file will be present to allow you to override a language string for all languages.
      - Meaning you do not have to change (for example) the towny prefix in each file, just the global.yml.
    - The console/logs will use the language set in your config.yml.
    - Closes #4926. 
  - Respect the skip named option in onCreatureSpawn, courtesy of Warriorrrr with PR #5227.
    - Closes #5226, Closes #5225.
0.97.1.5:
  - Fix lang file fallback, courtesy of Warriorrrr with PR #5230.
    - Custom language files that pre-date multi language support, which do not conform to a locale code (ie: en_CA, pt_BR) will not generate an NPE.
    - en_US will be loaded instead.
  - Fix some of the /ta town {townname} set commands being locked behind a permission test.
  - Fix NPE preventing null mayors from being replaced when /ta set mayor is used, courtesy of Warriorrrr with PR #5235.
  - Make context calculation faster, courtesy of Warriorrrr with PR #5244.
  - Check if resident is friended before sending removal message, courtesy of Warriorrrr with PR #5253.
  - Fix AlreadyRegisteredException when accepting two invites or more, courtesy of 0xBit-MC #5254.
  - Add prompts for Add Player to PermissionGUI, courtesy of Warriorrrr with PR #5248.
  - Prevent chickens being spawned without permission, courtesy of Warriorrrr with PR #5237.
    - An egg that lands in a plot will test if the egg-thrower can item_use in that location, when eggs are in the item_use list.
    - Eggs will automatically be added to the config.yml's item_use list with this update.
  - API: add TownyFriendlyFireTestEvent, courtesy of LudwigHornslied with PR #5246.